--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <select name="nextMove" id="nextMove">
                   <option value="lcsA" name="A">Lobby A</option>
                   <option value="lcsB" name="B">Lobby B</option>
-                  <option value="vTeams" name="C">Modify Teams</option>
+                  <option value="pmco" name="pmco">PMCO</option>
+                  <option value="vTeams" name="vTeams">Modify Teams</option>
                   </select>
                        <label for="select" class="control-label">Choose Action</label><i class="bar"></i>
                                </div> 
