--- a/lcsB.html
+++ b/lcsB.html
@@ -379,7 +379,7 @@ inp.addEventListener("input", function(e) {
         b = document.createElement("DIV");
         b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
         b.innerHTML += arr[i].substr(val.length);
-        b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+        b.innerHTML += '<input type="hidden" value="' + arr[i] + '">';
         b.addEventListener("click", function(e) {
             inp.value = this.getElementsByTagName("input")[0].value;
             closeAllLists();
