--- a/pmco.html
+++ b/pmco.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>UPDATE LOBBY B</title>
+    <title>UPDATE PMCO</title>
 <!-- Firebase -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
@@ -11,25 +11,6 @@
        <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-storage.js"></script>
        <script src="js.js"></script>
 
-  <script>
-  
-  
-// Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  let firebaseConfig = {
-    apiKey: "AIzaSyDxOcHHQhU6egLr2ZkgMlKmqv8dN4z7EAo",
-    authDomain: "scrypted-lcs.firebaseapp.com",
-    projectId: "scrypted-lcs",
-    storageBucket: "scrypted-lcs.appspot.com",
-    messagingSenderId: "449386524331",
-    appId: "1:449386524331:web:9c7b03c26e3814f92fd1ee",
-    measurementId: "G-WJ60BYCL9Z"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
- 
-  </script>
 
     <link rel="stylesheet" href="styles.css">
     
@@ -142,9 +123,9 @@ input[type=text] {
 let tagName = [];
 let teams = [];
 let noTeams = 0;
-let lobby = 'lcsB';
-let lobbyName = 'B';
-let lobbyNamee = 'b';
+let lobby = 'pmco';
+let lobbyName = 'A';
+let lobbyNamee = 'a';
 let db = firebase.firestore();
 
 
@@ -177,7 +158,7 @@ autocomplete(document.getElementById("team["+i+"]"), tagName);
  function getNoTeams(a) {
   let nooTeams = prompt(a);
   if(nooTeams == 0)
-  location.href = "vlcsB.html";
+  location.href = "vpmco.html";
   else if(nooTeams > 0 && nooTeams<=25)
   return nooTeams;
   else
