--- a/vlcsB.html
+++ b/vlcsB.html
@@ -194,7 +194,7 @@
   let n =  new Date();
   let y = n.getFullYear();
   let m = n.getMonth() + 1;
-  let d = n.getDate();
+  let d = n.getDate() - 1;
   document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y;  
         
     }
