--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                                 <br/>
             <div class="form-group" >
                 <select name="nextMove" id="nextMove">
-                  <option value="lcsA" name="A">Lobby A</option>
-                  <option value="lcsB" name="B">Lobby B</option>
-                  <option value="pmco" name="pmco">PMCO</option>
+                  <option value="leaderboard" name="A">LEADERBOARD</option>
                   <option value="vTeams" name="vTeams">Modify Teams</option>
                   </select>
                        <label for="select" class="control-label">Choose Action</label><i class="bar"></i>
