--- a/addTeams.html
+++ b/addTeams.html
@@ -23,11 +23,16 @@
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
 
-<a href="index.html" style="float: left;">HOME</a>
-<a href="vTeams.html" style="float: right;">View Teams</a>
- <br/>
-    
 
+ <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a class="active" href="addTeams.html">Add_Team</a></li>
+  <li><a href="boardTeams.html">Lobby_Teams</a></li>
+  <li><a href="leaderboard.html">Leaderboard</a></li>
+</ul>
+
+ <br/>
+ <br/>
 
 <!-- Add Team div -->
  <div class="container" id="addTeamDiv">
