--- a/vTeams.html
+++ b/vTeams.html
@@ -95,8 +95,14 @@ input[type=text] {
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
 
-<a href="index.html" style="float: left;">HOME</a>
-<a href="addTeams.html" style="float: right;">ADD TEAM</a>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="addTeams.html">Add_Team</a></li>
+  <li><a href="boardTeams.html">Lobby_Teams</a></li>
+  <li><a href="leaderboard.html">Leaderboard</a></li>
+</ul>
+
+ <br/>
  <br/>
     
  
