--- a/vpmco.html
+++ b/vpmco.html
@@ -195,7 +195,10 @@
   let y = n.getFullYear();
   let m = n.getMonth() + 1;
   let d = n.getDate();
-  document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y;  
+  document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y; 
+  let tDate = prompt("Enter Date (0 to use current date): ");
+   if(tDate != '0')
+   document.getElementById("date").innerHTML = tDate; 
         
     }
 
