--- a/vlcsA.html
+++ b/vlcsA.html
@@ -191,11 +191,15 @@
       else
       alert("Leaderboard empty")
   });
+  
   let n =  new Date();
   let y = n.getFullYear();
   let m = n.getMonth() + 1;
   let d = n.getDate() - 1;
-  document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y;  
+  document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y; 
+   let tDate = prompt("Enter Date (0 to use current date): ");
+   if(tDate != '0')
+   document.getElementById("date").innerHTML = tDate;
         
     }
 
