--- a/vlcsB.html
+++ b/vlcsB.html
@@ -196,6 +196,9 @@
   let m = n.getMonth() + 1;
   let d = n.getDate() - 1;
   document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y;  
+  let tDate = prompt("Enter Date (0 to use current date): ");
+   if(tDate != '0')
+   document.getElementById("date").innerHTML = tDate;
         
     }
 
