--- a/vpmco.html
+++ b/vpmco.html
@@ -196,7 +196,7 @@
   let m = n.getMonth() + 1;
   let d = n.getDate();
   document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y; 
-  let tDate = prompt("Enter Date (0 to use current date): ");
+  let tDate = prompt("Enter Date (0 to use today's date): ");
    if(tDate != '0')
    document.getElementById("date").innerHTML = tDate; 
         
