--- a/vlcsB.html
+++ b/vlcsB.html
@@ -194,7 +194,7 @@
   let n =  new Date();
   let y = n.getFullYear();
   let m = n.getMonth() + 1;
-  let d = n.getDate() - 1;
+  let d = n.getDate();
   document.getElementById("date").innerHTML = d + ' / ' + m + ' / ' + y;  
   let tDate = prompt("Enter Date (0 to use current date): ");
    if(tDate != '0')
